--- a/frontend/src/styles/cart.css
+++ b/frontend/src/styles/cart.css
@@ -1,7 +1,31 @@
-thead th {
-    @apply text-start
+tbody tr {
+    @apply border-t
 }
 
 tbody td {
-    @apply pt-1
+    @apply py-2 align-top
+}
+
+tbody span {
+    @apply font-semibold
+}
+
+tbody p {
+    @apply pb-1
+}
+
+tbody button {
+    @apply text-red-500
+}
+
+.form-group {
+    @apply mb-2
+}
+
+.form-group label {
+    @apply block pb-2
+}
+
+.form-group .form-control {
+    @apply block w-full border rounded px-3 py-2
 }
