--- a/frontend/src/services/service-card.css
+++ b/frontend/src/services/service-card.css
@@ -1,3 +1,3 @@
 .service__item {
-    @apply border-r-2 border-r-secondary-color border-b-2 border-b-secondary-color rounded-br-xl h-[180px]
+    @apply py-3 text-center
 }
