remove vercel from backend, add to forntend

--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -48,5 +48,5 @@ header i {
 }
 
 .cart__badge {
-    @apply absolute w-5 h-5 text-center leading-5 bg-secondary-color rounded-full left-1/2 bottom-3/4 font-semibold text-sm
+    @apply absolute text-white w-5 h-5 text-center leading-5 bg-secondary-color rounded-full left-1/2 bottom-3/4 font-semibold text-sm
 }
