--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -50,9 +50,10 @@ ul {
 
 .primary__btn a,
 .primary__btn span {
-  @apply block text-[1.1rem] text-white px-6 py-2 transition-all
+  @apply block text-lg text-white px-6 py-2 transition-all
 }
 
+.primary__btn p:hover,
 .primary__btn a:hover,
 .primary__btn span:hover {
   @apply text-inherit
