--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -3,7 +3,7 @@
 }
 
 header i {
-    @apply text-2xl leading-8
+    @apply text-2xl
 }
 
 .nav__item a {
@@ -45,10 +45,6 @@ header i {
 
 .menu__right button i:hover {
     @apply text-secondary-color
-}
-
-.cart__badge {
-    @apply absolute text-white w-5 h-5 text-center leading-5 bg-secondary-color rounded-full left-1/2 bottom-3/4 font-semibold text-sm
 }
 
 .user__wrapper {
