--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -43,30 +43,6 @@ header i {
     @apply cursor-default px-3
 }
 
-.menu__right button i:hover {
+.menu__right i:hover {
     @apply text-secondary-color
-}
-
-.user__wrapper {
-    @apply relative px-3
-}
-
-.user__wrapper i {
-    @apply cursor-pointer
-}
-
-.user__wrapper:hover span {
-    @apply block
-}
-
-.user__wrapper span {
-    @apply hidden absolute top-full right-0 w-[250px] bg-white leading-loose border-t-2 border-secondary-color z-50 rounded overflow-hidden shadow-md
-}
-
-.user__wrapper span p {
-    @apply hover:text-white hover:bg-secondary-color cursor-default px-1
-}
-
-.user__wrapper span button {
-    @apply w-full text-left cursor-pointer hover:text-white hover:bg-secondary-color px-1
 }
