--- a/frontend/src/styles/product-details.css
+++ b/frontend/src/styles/product-details.css
@@ -1,5 +1,4 @@
-.product__img img,
-.product__gallery img {
+img {
     @apply rounded max-md:mb-2
 }
 
@@ -8,7 +7,7 @@
 }
 
 .review__input {
-    @apply flex items-center justify-between w-full p-1 rounded-[50px] border border-secondary-color
+    @apply flex items-center justify-between w-full p-1 rounded-lg border border-secondary-color
 }
 
 .review__input input {
